--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="sécurité informatique, sensibilisation, BSoD, verrouillage, formation">
     <meta name="version" content="1.1">
     <meta name="release-date" content="2025-11-05">
-    <meta name="repository" content="https://github.com/WolwX/flag">
+    <meta name="repository" content="https://github.com/WolwX/Flag">
     <meta name="contact" content="wolwx@hotmail.com">
     <meta name="copyright" content="© 2025 Xavier (WolwX). All Rights Reserved.">
     <meta name="license" content="Proprietary - Tous droits réservés">
