--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <!-- Config Bar -->
     <div class="config-panel">
         <div class="config-bar-grid">
+            <!-- Nom de l'ordinateur (nouveau) -->
+            <div class="config-group">
+                <div class="config-label"><label for="inputComputerName">💻 Nom PC</label></div>
+                <div class="config-input"><input type="text" id="inputComputerName" placeholder="PC-..." style="width:100%;" /></div>
+            </div>
             <!-- Icône d'ambiance -->
             <div class="config-group">
                 <div class="config-label"><label for="iconEmojiSelect">Icône</label></div>
