feat: ajout bouton déverrouillage sans code + corrections v1.3
- Ajout bouton 'Déverrouiller mon écran' quand lock désactivé
- Correction orthographique OBLI_VERROUILLAGE  OUBLIE_VERROUILLAGE
- Suppression variable fantôme inputTarget
- Unification variables globales (expectedCode centralisé)
- Correction IDs incohérents (inputFlagger, customMessageDisplay, emoji-bg-preview)
- Déplacement updateLockState() en scope global
- Suppression double appel getUrlParameters()
- Amélioration fermeture page (exit fullscreen + redirect propre)
- Timer arrêté lors du déverrouillage simple
- Message de confirmation harmonisé (3 secondes)

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                 <p>Pour plus d'informations sur les bonnes pratiques de sécurité, scannez le code.</p>
                             </div>
                             <div class="code-defaillance">
-                                <p>Code de défaillance : <b>OBLI_VERROUILLAGE</b></p>
+                                <p>Code de défaillance : <b>OUBLIE_VERROUILLAGE</b></p>
                             </div>
                         </div>
                     </div>
