feat: branding hygiène numérique XR avec emoji Unicode + corrections v1.3
- Ajout branding line personnalisable (client/brandingurl)
- Remplacement icône Font Awesome par emoji ℹ (standalone sans CDN)
- Correction bug simpleUnlockSection visible au chargement
- Changement URL branding vers wolwx.net
- Toutes corrections v1.2  v1.3 appliquées

--- a/index.html
+++ b/index.html
@@ -145,7 +145,13 @@
                                 <p>Pour plus d'informations sur les bonnes pratiques de sécurité, scannez le code.</p>
                             </div>
                             <div class="code-defaillance">
-                                <p>Code de défaillance : <b>OUBLIE_VERROUILLAGE</b></p>
+                                <p>Code de défaillance : <b>OUBLI_VERROUILLAGE</b></p>
+                            </div>
+                            <div class="branding-line">
+                                Sensibilisation hygiène numérique<span id="clientName"></span> by XR
+                                <a href="https://www.itdaqui.fr" target="_blank" id="brandingLink" class="branding-icon" title="Plus d'infos">
+                                    <i class="fa-solid fa-circle-info"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
