fix: mise à jour URL branding vers wolwx.net dans index.html

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             </div>
                             <div class="branding-line">
                                 Sensibilisation hygiène numérique<span id="clientName"></span> by XR
-                                <a href="https://www.itdaqui.fr" target="_blank" id="brandingLink" class="branding-icon" title="Plus d'infos">
+                                <a href="https://www.wolwx.net" target="_blank" id="brandingLink" class="branding-icon" title="Plus d'infos">
                                     <i class="fa-solid fa-circle-info"></i>
                                 </a>
                             </div>
